@@ -3,3 +3,5 @@
 2003-10-30
 	changed name of package from Info to RPM::Info
 	changed perldoc layout
+2003-12-08
+	added methods "getRpmInfoRaw" and "getRpmDependents"
